kubernetes/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lab-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      protocol: HTTPS
      port: 443
      hostname: "*.lab.2bit.name"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lab-2bit-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
