kubernetes/gateway/httproute-longhorn.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  parentRefs:
    - name: lab-gateway
      namespace: traefik
  hostnames:
    - "longhorn.core.lab.2bit.name"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
