kubernetes/gateway/httproute-technitium.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: technitium-ui
  namespace: dns
spec:
  parentRefs:
    - name: lab-gateway
      namespace: traefik
  hostnames:
    - "dns.core.lab.2bit.name"
  rules:
    - backendRefs:
        - name: technitium-dns
          port: 5380
